<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Betty</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="addCart">Add to Cart</string>
    <string name="desc">Description</string>
    <string name="writeComment">Write a new Comment</string>
    <string name="send">Send</string>

    <color name="bgGrey">#f1f5f7</color>
    <color name="blueBack">#4fc1e9</color>

    <string-array name="to_array">
        <item>Administrator</item>
        <item>Vendor</item>
        <item>Customer</item>
    </string-array>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Products</item>
        <item>Categories</item>
        <item>Blog</item>
        <item>Shops</item>
        <item>Profile</item>
        <item>Messages</item>
        <item>Contact Us</item>
        <item>Product Reports</item>
    </string-array>
    <string-array name="nav_drawer_items_vendor">
        <item>Products</item>
        <item>Product Reports</item>
        <item>Profile</item>
        <item>Messages</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </array>

    <string name="title_activity_add_new_product_fragment">Add New Product</string>
    <string name="title_activity_product_reports_fragment">ProductReportsFragment</string>
    <string name="title_activity_terms">TermsActivity</string>
    <string name="link"><u>Terms</u>.</string>

</resources>