<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/pdSVMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="16dip" >

            <TextView
                android:id="@+id/pdTVName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="Name" />

            <TextView
                android:id="@+id/pdTVPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="Price"
                android:textColor="#f00" />

            <ImageView
                android:id="@+id/pdIVImage"
                android:layout_width="fill_parent"
                android:layout_height="150dip"
                android:layout_below="@+id/pdTVPrice"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/pdTVShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/pdIVImage"
                android:background="@drawable/buttonback"
                android:text="@string/share"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/pdTVAddCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/pdIVImage"
                android:background="@drawable/buttonback"
                android:clickable="true"
                android:text="@string/addCart"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/pdTVDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pdIVImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dip"
                android:text="@string/desc" />
        </RelativeLayout>
    </ScrollView>

    <ListView
        android:id="@+id/pdListComments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pdSVMain"
        android:layout_marginBottom="60dip"
        android:layout_marginTop="10dip"
        android:divider="#efefef"
        android:dividerHeight="5dip" >
    </ListView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:stretchColumns="0" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/pdEtComment"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@color/bgGrey"
                android:hint="@string/writeComment"
                android:paddingLeft="5dip"
                android:textColor="#000" />

            <Button
                android:id="@+id/pdBtAddComment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/buttonback"
                android:text="@string/send"
                android:textColor="#fff" />
        </TableRow>
    </TableLayout>

</RelativeLayout>