<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/blogSVMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="16dip" >

            <TextView
                android:id="@+id/blogTVName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Name" />

            <TextView
                android:id="@+id/blogTVAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="Author"
                android:textColor="#f00" />

            <ImageView
                android:id="@+id/blogIVImage"
                android:layout_width="fill_parent"
                android:layout_height="100dip"
                android:layout_below="@+id/blogTVName"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/blogTVShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/blogIVImage"
                android:background="@drawable/buttonback"
                android:text="@string/share"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/blogTVDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/blogIVImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dip"
                android:paddingBottom="50dip"
                android:text="@string/desc" />
        </RelativeLayout>
    </ScrollView>

    <ListView
        android:id="@+id/blogListComments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blogSVMain"
        android:layout_marginTop="10dip" >
    </ListView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:stretchColumns="0" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/blogETComments"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:background="@color/bgGrey"
                android:gravity="left|center_vertical"
                android:hint="@string/writeComment"
                android:textColor="#000" />

            <Button
                android:id="@+id/blogBTAddComment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/buttonback"
                android:text="@string/send"
                android:textColor="#fff" />
        </TableRow>
    </TableLayout>

</RelativeLayout>